--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -20,9 +20,9 @@
   <!-- NAVBAR -->
   <nav>
     <div>
-      <img src="./images/slack-logo.png" alt="Slack logo" />
+      <img class="slack_logo" src="./images/slack-logo.png" alt="Slack logo" />
 
-      <ul>
+     <ul>
         <li>
           <a href="#">Product</a>
         </li>
@@ -38,7 +38,7 @@
       </ul>
     </div>
 
-    <div>
+    <div id="nav-buttons">
       <button>
         <img src="./images/icon-search.png" alt="Search icon">
       </button>
@@ -62,14 +62,15 @@
   <!-- HEADER -->
   <header>
     <div>
-      <h1>Great teamwork starts with a digital HQ</h1>
+      <h1 class="header-title">Great teamwork starts with a digital HQ</h1>
+      <p id="header-p">
+        <span class="slack-price">Slack is free to try </span>
+        <span class="how-long">for as long as you'd like.</span>
+      </p>
+      <div class="header-buttons">
+        <button class="sign-email">Sign up with email</button>
 
-      <p>Slack is free to try for as long as you'd like.</p>
-
-      <div>
-        <button>Sign up with email</button>
-
-        <button>
+        <button class="sign-google">
           <img src="./images/logo-google.png" alt="Google logo" />
           <span>Sign up with Google</span>
         </button>
@@ -78,15 +79,15 @@
     </div>
 
     <div>
-      <img src="./images/hero-product-ui.png" alt="Slack app screenshot" />
+      <img class="app-screenshot" src="./images/hero-product-ui.png" alt="Slack app screenshot" />
     </div>
   </header>
 
   <main>
-    <section>
+    <section id="partners">
       <p>Trusted by companies all over the world</p>
 
-      <div>
+      <div class="partners-logo">
         <img src="./images/logo-airbnb.png" alt="Airbnb logo" />
         <img src="./images/logo-nasa.png" alt="NASA logo" />
         <img src="./images/logo-uber.png" alt="Uber logo" />
@@ -97,15 +98,15 @@
 
     </section>
 
-    <section>
-      <h3>Teams large and small rely on Slack</h3>
-      <p>Slack securely scales up to support collaboration at the world’s biggest companies.</p>
+    <section id="comunity-data">
+      <h3 class="title">Teams large and small rely on Slack</h3>
+      <p class="subtitle">Slack securely scales up to support collaboration at the world’s biggest companies.</p>
 
 
-      <ul>
+      <ul id="com-data-list">
         <li>
           <p><span>85%</span></p>
-          <p>
+          <p class="text">
             of users say Slack has improved communication
             <sup>*</sup>
           </p>
@@ -113,7 +114,7 @@
 
         <li>
           <p><span>86%</span></p>
-          <p>
+          <p class="text">
             feel their ability to work remotely has improved has improved
             <sup>*</sup>
           </p>
@@ -121,7 +122,7 @@
 
         <li>
           <p><span>88%</span></p>
-          <p>
+          <p class="text">
             feel more connected to their teams*
             <sup>*</sup>
           </p>
@@ -129,29 +130,31 @@
       </ul>
     </section>
 
-    <section>
+    <section id="closing-sale">
       <h3>Welcome to your new digital HQ</h3>
 
-      <button>Try for free</button>
-      <button>Talk to sales</button>
+      <button class="slack-free">Try for free</button>
+      <button class="slack-premium">Talk to sales</button>
     </section>
 
   </main>
 
   <footer>
-    <ul>
+    <hr>
+
+    <ul id="footer-ul">
       <li>Status</li>
       <li>Privacy</li>
       <li>Terms</li>
       <li>Cookie Preferences</li>
       <li>Contact Us</li>
       <li>Change Region</li>
-      <li>Download Slack</li>
+      <li style="color:#4285F4;">Download Slack</li>
     </ul>
 
-    <hr>
+    
 
-    <ul>
+    <ul id="socialmedia-ul">
       <li>
         <i class="fab fa-twitter"></i>
       </li>
@@ -166,7 +169,7 @@
       </li>
     </ul>
 
-    <div>
+    <div id="copyrights">
       <small>
         &copy; 2022 Slack Technologies, LLC, a Salesforce company. All rights reserved. Various trademarks held by
         their respective owners.
