Responsive Design for above 1000px

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -22,7 +22,7 @@
     <div>
       <img class="slack_logo" src="./images/slack-logo.png" alt="Slack logo" />
 
-     <ul>
+     <ul id="nav-list">
         <li>
           <a href="#">Product</a>
         </li>
@@ -58,7 +58,6 @@
     </div>
   </nav>
 
-
   <!-- HEADER -->
   <header>
     <div>
@@ -78,7 +77,7 @@
 
     </div>
 
-    <div>
+    <div id="header-img">
       <img class="app-screenshot" src="./images/hero-product-ui.png" alt="Slack app screenshot" />
     </div>
   </header>
@@ -123,7 +122,7 @@
         <li>
           <p><span>88%</span></p>
           <p class="text">
-            feel more connected to their teams*
+            feel more connected to their teams
             <sup>*</sup>
           </p>
         </li>
@@ -132,9 +131,10 @@
 
     <section id="closing-sale">
       <h3>Welcome to your new digital HQ</h3>
-
-      <button class="slack-free">Try for free</button>
-      <button class="slack-premium">Talk to sales</button>
+      <div>
+        <button class="slack-free">Try for free</button>
+        <button class="slack-premium">Talk to sales</button>
+      </div>
     </section>
 
   </main>
