--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -19,10 +19,10 @@
 <body>
   <!-- NAVBAR -->
   <nav>
-    <div>
+    <div id="nav-left">
       <img class="slack_logo" src="./images/slack-logo.png" alt="Slack logo" />
 
-     <ul id="nav-list">
+     <ul id="nav-ul-1">
         <li>
           <a href="#">Product</a>
         </li>
@@ -38,16 +38,16 @@
       </ul>
     </div>
 
-    <div id="nav-buttons">
+    <div id="nav-right">
       <button>
         <img src="./images/icon-search.png" alt="Search icon">
       </button>
 
-      <button>
+      <button class="nav-menu-button">
         <img src="./images/icon-menu.png" alt="Menu icon">
       </button>
 
-      <ul hidden>
+      <ul id="nav-ul-2"hidden>
         <li>
           <a href="#">Sign in</a>
         </li>
